--- a/tjwsasslint.yml
+++ b/tjwsasslint.yml
@@ -133,6 +133,7 @@ rules:
         - border-style
         - border-color
         - border-collapse
+        - border-spacing
         - border-top
         - border-top-width
         - border-top-style
