--- a/tjwsasslint.yml
+++ b/tjwsasslint.yml
@@ -168,6 +168,7 @@ rules:
         # Text treatment
         - color
         - direction
+        - font
         - font-family
         - font-size
         - -webkit-font-smoothing
