--- a/tjwsasslint.yml
+++ b/tjwsasslint.yml
@@ -116,6 +116,9 @@ rules:
         - column-gap
         - column-fill
         - column-rule
+        - column-rule-width
+        - column-rule-style
+        - column-rule-color
         - column-span
         - column-width
         - flex
@@ -201,12 +204,23 @@ rules:
         - border-top-right-radius
         - border-bottom-right-radius
         - border-bottom-left-radius
+        - border-image
+        - border-image-source
+        - border-image-width
+        - border-image-outset
+        - border-image-repeat
+        - border-image-slice
         - empty-cells
         - margin
+        - margin-collapse
         - margin-top
+        - margin-top-collapse
         - margin-right
+        - margin-right-collapse
         - margin-bottom
+        - margin-bottom-collapse
         - margin-left
+        - margin-left-collapse
         - padding
         - padding-top
         - padding-right
@@ -229,6 +243,7 @@ rules:
         - font-style
         - font-variant
         - font-weight
+        - hanging-punctuation
         - hyphens
         - letter-spacing
         - line-height
@@ -243,6 +258,9 @@ rules:
         - text-align
         - text-align-last
         - text-decoration
+        - text-decoration-color
+        - text-decoration-line
+        - text-decoration-style
         - text-emphasis
         - text-emphasis-color
         - text-emphasis-style
@@ -273,6 +291,7 @@ rules:
         - animation-direction
         - animation-fill-mode
         - animation-play-state
+        - appearance
         - backface-visibility
         - box-shadow
         - box-sizing
@@ -285,6 +304,7 @@ rules:
         - fill
         - filter
         - float
+        - marks
         - mix-blend-mode
         - nav-index
         - nav-up
@@ -301,10 +321,12 @@ rules:
         - overflow-wrap
         - overflow-x
         - overflow-y
+        - page
         - perspective
         - perspective-origin
         - pointer-events
         - resize
+        - size
         - stroke
         - stroke-width
         - stroke-linecap
