--- a/tjwsasslint.yml
+++ b/tjwsasslint.yml
@@ -132,6 +132,11 @@ rules:
         - align-items
         - align-self
         - justify-content
+        - justify-items
+        - justify-self
+        - place-content
+        - place-items
+        - place-self
         - order
         - grid
         - grid-start
@@ -155,6 +160,7 @@ rules:
         - grid-row-start
         - grid-row-end
         - grid-row-gap
+        - row-gap
         - grid-auto-columns
         - grid-auto-rows
         - grid-auto-flow
@@ -170,6 +176,7 @@ rules:
         # Effects the most amount of pixel paint in the element
         - background
         - background-attachment
+        - background-blend-mode
         - background-clip
         - background-color
         - background-image
@@ -205,6 +212,34 @@ rules:
         - border-top-right-radius
         - border-bottom-right-radius
         - border-bottom-left-radius
+        - border-block
+        - border-block-width
+        - border-block-style
+        - border-block-color
+        - border-block-start
+        - border-block-start-color
+        - border-block-start-style
+        - border-block-start-width
+        - border-block-end
+        - border-block-end-color
+        - border-block-end-style
+        - border-block-end-width
+        - border-inline
+        - border-inline-width
+        - border-inline-style
+        - border-inline-color
+        - border-inline-start
+        - border-inline-start-width
+        - border-inline-start-style
+        - border-inline-start-color
+        - border-inline-end
+        - border-inline-end-width
+        - border-inline-end-style
+        - border-inline-end-color
+        - border-start-start-radius
+        - border-start-end-radius
+        - border-end-start-radius
+        - border-end-end-radius
         - border-image
         - border-image-source
         - border-image-width
@@ -222,11 +257,23 @@ rules:
         - margin-bottom-collapse
         - margin-left
         - margin-left-collapse
+        - margin-block
+        - margin-block-start
+        - margin-block-end
+        - margin-inline
+        - margin-inline-start
+        - margin-inline-end
         - padding
         - padding-top
         - padding-right
         - padding-bottom
         - padding-left
+        - padding-block
+        - padding-block-start
+        - padding-block-end
+        - padding-inline
+        - padding-inline-start
+        - padding-inline-end
         # Text treatment
         - color
         - direction
@@ -236,6 +283,10 @@ rules:
         - font-emphasize-position
         - font-emphasize-style
         - font-family
+        - font-feature-settings
+        - font-kerning
+        - font-language-override
+        - font-optical-sizing
         - font-size
         - font-size-adjust
         - osx-font-smoothing
@@ -244,22 +295,35 @@ rules:
         - font-smoothing
         - font-stretch
         - font-style
+        - font-synthesis
         - font-variant
+        - font-variant-alternates
+        - font-variant-caps
+        - font-variant-east-asian
+        - font-variant-ligatures
+        - font-variant-numeric
+        - font-variant-position
+        - font-variation-settings
         - font-weight
         - hanging-punctuation
         - hyphens
         - letter-spacing
+        - line-break
+        - -webkit-line-clamp
+        - line-clamp
         - line-height
         - list-style
         - list-style-image
         - list-style-position
         - list-style-type
+        - orphans
         - quotes
         - speak
         - src
         - tab-size
         - text-align
         - text-align-last
+        - text-combine-upright
         - text-decoration
         - text-decoration-color
         - text-decoration-line
@@ -272,6 +336,7 @@ rules:
         - text-emphasis-position
         - text-indent
         - text-justify
+        - text-orientation
         - text-outline
         - text-overflow
         - text-overflow-ellipsis
@@ -285,10 +350,13 @@ rules:
         - unicode-bidi
         - unicode-range
         - white-space
+        - widows
         - word-break
         - word-spacing
         - word-wrap
+        - writing-mode
         # Less common properties go to the bottom
+        - additive-symbols
         - all
         - animation
         - animation-name
@@ -304,32 +372,64 @@ rules:
         - appearance
         - backface-visibility
         - block-size
+        - min-block-size
         - box-decoration-break
         - box-shadow
         - box-sizing
+        - page-break-before
         - break-before
+        - page-break-inside
         - break-inside
+        - page-break-after
         - break-after
         - caret-color
         - clear
         - clip
+        - clip-path
+        - color-adjust
         - counter-reset
         - counter-increment
         - cursor
+        - fallback
         - -webkit-filter
         - fill
         - filter
         - float
+        - image-orientation
         - -ms-interpolation-mode
         - image-rendering
+        - inline-size
+        - min-inline-size
+        - inset
+        - inset-block
+        - inset-block-start
+        - inset-block-end
+        - inset-inline
+        - inset-inline-start
+        - inset-inline-end
+        - isolation
         - marks
+        - mask
+        - mask-clip
+        - mask-composite
+        - mask-image
+        - mask-mode
+        - mask-origin
+        - mask-position
+        - mask-repeat
+        - mask-size
+        - mask-type
         - mix-blend-mode
         - nav-index
         - nav-up
         - nav-right
         - nav-down
         - nav-left
+        - negative
+        - object-fit
+        - object-position
         - opacity
+        - orientation
         - outline
         - outline-width
         - outline-style
@@ -344,15 +444,56 @@ rules:
         - perspective
         - perspective-origin
         - pointer-events
+        - prefix
+        - range
         - resize
+        - rotate
+        - scale
+        - scroll-behavior
+        - scroll-margin
+        - scroll-margin-top
+        - scroll-margin-right
+        - scroll-margin-bottom
+        - scroll-margin-left
+        - scroll-margin-block
+        - scroll-margin-block-start
+        - scroll-margin-block-end
+        - scroll-margin-inline
+        - scroll-margin-inline-start
+        - scroll-margin-inline-end
+        - scroll-padding
+        - scroll-padding-top
+        - scroll-padding-right
+        - scroll-padding-bottom
+        - scroll-padding-block
+        - scroll-padding-left
+        - scroll-padding-block-start
+        - scroll-padding-block-end
+        - scroll-padding-inline
+        - scroll-padding-inline-start
+        - scroll-padding-inline-end
+        - scroll-snap-align
+        - scroll-snap-stop
+        - scroll-snap-type
+        - scrollbar-width
+        - scrollbar-color
+        - shape-image-threshold
+        - shape-margin
+        - shape-outside
         - size
+        - speak-as
         - stroke
         - stroke-width
         - stroke-linecap
         - stroke-dasharray
         - stroke-dashoffset
+        - suffix
+        - symbols
+        - system
+        - touch-action
         - -webkit-transform
         - transform
+        - transform-box
         - transform-origin
         - transform-style
         - -webkit-transition
@@ -361,11 +502,15 @@ rules:
         - transition-duration
         - transition-timing-function
         - transition-delay
+        - translate
         - user-select
+        - user-zoom
         - vertical-align
         - visibility
         - will-change
         - zoom
+        - min-zoom
+        - max-zoom
         - z-index
   # Comma separated selectors should be on their own lines
   single-line-per-selector: 1
