--- a/tjwsasslint.yml
+++ b/tjwsasslint.yml
@@ -76,14 +76,14 @@ rules:
   no-empty-rulesets: 2
   # Never use !important, you know better
   no-important: 2
-  # Warn if using you typo'd a hex value
+  # Warn if using a typo'd a hex value, #F00 instead of #G00
   no-invalid-hex: 1
   # Do not nest things without a need to
   no-mergeable-selectors: 2
   # Warn about colour or backgorund
   no-misspelled-properties: 1
   # div.thing and div#thing are not allowed, use .thing or #thing
-  # input[type="checkbox"] is allowed
+  # div and input[type="checkbox"] are allowed
   no-qualifying-elements:
    - 2
    - allow-element-with-attribute: true
@@ -575,7 +575,7 @@ rules:
   space-after-colon:
     - 1
     - include: true
-  # Warn if commas is not followed by space. rgb(0, 0, 0) instead of rgb(0,0,0)
+  # Warn if commas are not followed by a space. rgb(0, 0, 0) instead of rgb(0,0,0)
   space-after-comma:
     - 1
     - include: true
@@ -591,7 +591,7 @@ rules:
   space-before-brace:
     - 1
     - include: true
-  # Warn if space occurs before color. color: $red instead of color : $red
+  # Warn if space occurs before colon. color: $red instead of color : $red
   space-before-colon:
     - 1
     - include: false
